--- a/src/api/templates/excerpt_card.html
+++ b/src/api/templates/excerpt_card.html
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excerpt Card</title>
     <style>
